...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/compLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

...
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                app:layout_constraintBottom_toTopOf="@+id/nameSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.616" />

...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appearance" />


            <TextView
                android:id="@+id/availPointsNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:text="@string/points_num"
                app:layout_constraintBaseline_toBaselineOf="@+id/availPoints"
                app:layout_constraintBottom_toBottomOf="@+id/availPoints"
                app:layout_constraintEnd_toEndOf="@+id/availPoints" />

            <TableLayout
                android:id="@+id/tableHandeln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="408dp"
                android:showDividers="middle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
...
                        android:text="@string/points_zero"
                        android:textAlignment="center">

                    </TextView>

                    <Button
                        android:id="@+id/plusButton"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
                        android:text="@string/points_plus" />

                </TableRow>

...
