<resources>
    <string name="app_name">BuildAHero</string>
    <string name="action_settings">Settings</string>
    <string name="button_finish">Fertig</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="settings_about_credits">Build a Hero was created by&#xD;Finn Christians, &#xD;Nina Dörnbrak, &#xD;Tim Eberhardt, &#xD;Tanyel Stoyloff</string>
    <string name="contact">Bei Fehlern melden Sie sich gern unter s0556736@htw-berlin.de :-)</string>
    <string name="button_go">Los gehts!</string>
    <string name="points_available">Verfügbare Punkte: </string>

    <string name="creation_head">Charaktererstellung</string>
    <string name="edit_head">Charakterbearbeitung</string>
    <string name="add_button">Hinzufügen</string>

    <string name="char_name">Name</string>
    <string name="char_gender">Geschlecht</string>
    <string name="char_age">Alter</string>
    <string name="char_race">Rasse</string>
    <string name="char_visual">Aussehen</string>

    <string name="handeln">Handeln Gesamtwert:</string>
    <string name="wissen">Wissen Gesamtwert:</string>
    <string name="interagieren">Interagieren Gesamtwert:</string>
    <string name="tal_1">Talent 1</string>
    <string name="tal_2">Talent 2</string>
    <string name="tal_3">Talent 3</string>
    <string name="tal_4">Talent 4</string>
    <string name="tal_5">Talent 5</string>

    <string name="points_plus">+</string>
    <string name="points_minus">-</string>
    <string name="points_num">400</string>
    <string name="points_zero">0</string>

    <string name="background_color">#eeeeee</string>

    <string name="logo">Logo</string>

    <string name="kontakt">Kontakt</string>
    <string name="credits">Credits</string>
    <string name="dice">Würfel</string>
</resources>
